Removed an unnecessary script tag for main.js in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
     <!-- MIME type of "text/html" is not a valid JavaScript MIME type. -->
-    <script type="module" src="/static/js/main.js"></script>
+    <!-- No script tag for /static/js/main.js needed -->
   </body>
 </html>
