--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Honoring the Past, Growing Together 🌿💛"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     
     <title>Family Tree</title>
